--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     },
     "dependencies": {
         "next": "16.0.4",
+        "swr": "^2.2.5",
+        "socket.io-client": "^4.8.1",
         "react": "19.2.0",
-        "react-dom": "19.2.0"
+        "react-dom": "19.2.0",
+        "xstate": "^5.20.0",
+        "@xstate/react": "^6.0.0",
+        "clsx": "^2.1.1"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
